fix left scroll button on safari

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   margin-left: 10px;
   padding-left: 2px;
   top: 50Vh;
+  left: 0;
   outline: none;
   border: none;
   user-select: none;
@@ -29,7 +30,7 @@
   background: whitesmoke;
   box-shadow: rgb(0, 0, 0) 1px 1px 10px 4px;
   border-radius: 35px;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .rightScrollButton {
@@ -51,7 +52,7 @@
   background: whitesmoke;
   box-shadow: rgb(0, 0, 0) 1px 1px 10px 4px;
   border-radius: 35px;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .leftScrollButtonHelp {
